tests/error/continue_outside_loop.magi
// TEST: Continue outside loop should error

main :: () -> i32 {
    continue
    return 0
}
